# Client_App

./: .gitignore  CMakeLists.txt  README.md
src/: Accumulation.cpp  Accumulation.h  Average.cpp  Average.h  COMM_MEDIA.cpp  COMM_MEDIA.h  Client.cpp  Client.h  DataBase.cpp  DataBase.h  Socket.cpp  main.cpp
